--- a/public/assets/stylesheet/public.less
+++ b/public/assets/stylesheet/public.less
@@ -30,6 +30,7 @@ section.container {
   padding: 40px;
   background-color: #ffffff;
   margin-bottom: 25px;
+  border: 1px solid #ddd;
 }
 
 .section_head {
@@ -99,11 +100,11 @@ section h1 {
 
   min-height: 100%;
   margin: 0 auto -60px; /* the bottom margin is the negative value of the footer's height */
-  background: rgba(0, 0, 0, .4);
+ /* background: rgba(0, 0, 0, .4); */
 
   #organiserHead {
     text-align: center;
-    color: #fff;
+    color: #131e29;
     border: none;
     font-size: 15px;
     opacity: .6;
