--- a/public/assets/stylesheet/public.less
+++ b/public/assets/stylesheet/public.less
@@ -155,7 +155,23 @@ section h1 {
     margin-bottom: 30px;
   }
 
-  #intro .event_buttons .btn-event-link {
+ #intro .event_buttons .btn-event-link {
+  display:inline-block;
+  padding:0.3em 1.2em;
+  margin:0 0.1em 0.1em 0;
+  border:0.16em solid rgba(255,255,255,0);
+  border-radius:2em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:#FFFFFF;
+  text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+  text-align:center;
+  transition: all 0.2s;
+ }
+
+ /* #intro .event_buttons .btn-event-link {
     line-height: 35px;
     font-size: 17px;
     text-transform: uppercase;
@@ -168,10 +184,11 @@ section h1 {
     transition: all 0.15s ease-in-out;
     width: 100%;
     background: rgba(0, 0, 0, 0.3);
-
   }
+  */
   #intro .event_buttons .btn-event-link:hover {
-    border-color: rgba(255, 255, 255, 0.6);
+    border-color: rgba(255,255,255,1);
+//    border-color: rgba(255, 255, 255, 0.6);
 
   }
 
