--- a/public/assets/stylesheet/public.less
+++ b/public/assets/stylesheet/public.less
@@ -169,6 +169,7 @@ section h1 {
   text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
   text-align:center;
   transition: all 0.2s;
+  background-color:#4e9af1
  }
 
  /* #intro .event_buttons .btn-event-link {
@@ -187,7 +188,7 @@ section h1 {
   }
   */
   #intro .event_buttons .btn-event-link:hover {
-    border-color: rgba(255,255,255,1);
+    border-color: rgb(13, 136, 19);
 //    border-color: rgba(255, 255, 255, 0.6);
 
   }
